<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Instructions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="474dp"
        android:layout_height="761dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="412dp"
            android:layout_height="100dp"
            android:layout_marginTop="-63dp"
            android:background="@color/grey"
            android:text="How to Play"
            android:textAlignment="center"
            android:textColor="@color/crimson"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="287dp"
            android:layout_height="76dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="152dp"
            android:text="@string/Instruction1"
            android:textColor="@color/crimson"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="268dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="540dp"
            android:text="@string/Instruction5"
            android:textColor="@color/crimson"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="287dp"
            android:layout_height="76dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="228dp"
            android:text="@string/Instruction2"
            android:textColor="@color/crimson"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="287dp"
            android:layout_height="76dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="304dp"
            android:text="@string/Instruction3"
            android:textColor="@color/crimson"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="287dp"
            android:layout_height="76dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="392dp"
            android:text="@string/Instruction4"
            android:textColor="@color/crimson"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="113dp"
            android:layout_height="64dp"
            android:layout_marginStart="132dp"
            android:layout_marginBottom="44dp"
            android:text="Start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput1"
            android:layout_width="373dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="128dp"
            android:background="@color/white"
            android:hint="Enter your name"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>